--- a/beep-vue-app/.env.production.example
+++ b/beep-vue-app/.env.production.example
@@ -1,4 +1,4 @@
-VUE_APP_GOOGLE_MAPS_KEY = Fillinyourownkeyhere
+VUE_APP_GOOGLE_MAPS_KEY = AIzaSyBJBLISlypXom42MGRXm7KUKAitVFu3Bhk
 
 VUE_APP_API_URL = https://api.beep.nl/api/
 VUE_APP_BASE_API_URL = https://api.beep.nl
