--- a/beep-vue-app/package.json
+++ b/beep-vue-app/package.json
@@ -3,7 +3,6 @@
   "version": "4.0.21",
   "private": true,
   "scripts": {
-
     "serve": "cross-env VUE_APP_ASSETS_URL=https://assets.beep.nl/static/app vue-cli-service serve",
     "build": "cross-env NODE_ENV=production vue-cli-service build",
     "test:unit": "cross-env VUE_APP_TEST=unit vue-cli-service test:unit",
@@ -86,7 +85,7 @@
     "eslint-plugin-prettier": "^3.2.0",
     "eslint-plugin-promise": "4.2.x",
     "eslint-plugin-standard": "^4.1.0",
-    "eslint-plugin-vue": "6.2.x",
+    "eslint-plugin-vue": "^9.32.0",
     "express": "^4.18.2",
     "faker": "^4.1.0",
     "imagemin-lint-staged": "^0.5.1",
@@ -105,6 +104,7 @@
     "stylelint-scss": "3.14.x",
     "vue-cli-plugin-element": "^1.0.1",
     "vue-cli-plugin-vuetify": "^2.2.2",
+    "vue-eslint-parser": "^9.4.3",
     "vue-template-compiler": "^2.7.14",
     "vuepress": "1.3.x",
     "vuetify": "^2.6.10",
